# hms-computer-graphics-demo

./: README-CN.md  README.md  README_ZH.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/MainApplication/: MainApplication.h
app/src/main/res/values/: strings.xml
samples/cgkit-rendering-demo/: README.md  build.gradle  settings.gradle
samples/cgkit-rendering-demo/app/: build.gradle
samples/cgkit-rendering-demo/app/src/main/: AndroidManifest.xml
samples/cgkit-rendering-demo/app/src/main/cpp/source/: MainApplication.cpp
samples/cgkit-rendering-demo/app/src/main/res/values/: strings.xml  styles.xml
samples/cgkit-rendering-demo/gradle/wrapper/: gradle-wrapper.properties
samples/huawei-cg-occlusionculling-cpp-demo/: Android.mk  Application.mk  README-CN.md  README.md  README_ZH.md  Sample.cpp
samples/huawei-cg-occlusionculling-cpp-demo/Sample/: README-CN.md  README.md
samples/huawei-cg-offlinesupres-android-cpp-demo/: README-CN.md  README-ZH.md  README.md  local.properties  settings.gradle
samples/huawei-cg-offlinesupres-android-cpp-demo/app/: build.gradle
samples/huawei-cg-offlinesupres-android-cpp-demo/app/src/main/: AndroidManifest.xml
samples/huawei-cg-offlinesupres-android-cpp-demo/app/src/main/cpp/: CMakeLists.txt
samples/huawei-cg-offlinesupres-android-cpp-demo/app/src/main/cpp/include/: OSRPluginCommon.h  OSRPluginInterface.h
samples/huawei-cg-offlinesupres-android-cpp-demo/app/src/main/cpp/source/: glestest.cpp
samples/huawei-cg-offlinesupres-android-cpp-demo/app/src/main/res/layout/: activity_main.xml
samples/huawei-cg-offlinesupres-android-cpp-demo/gradle/wrapper/: gradle-wrapper.properties
samples/huawei-cg-plugin-cpp-demo/: Application.mk  README-CN.md  README-ZH.md  README.md  build.bat
samples/huawei-cg-plugin-cpp-demo/Src/: Android.mk  PluginDemo.cpp  PluginDemo.h
samples/huawei-cg-plugin-cpp-demo/pluginList/: plugin.json
samples/huawei-cg-renderframework-android-cpp-demo/: README-CN.md  README.md  README_ZH.md  settings.gradle
samples/huawei-cg-renderframework-android-cpp-demo/app/: build.gradle
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/: AndroidManifest.xml
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/assets/: config.json
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/assets/material/: Avatar.cgmat  allParameters.bmat  deferred_composition.cgmat  skybox.cgmat
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/assets/pluginList/: plugin.json
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/assets/resource/: run.bat
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/assets/shaders/: deferred_pbr_composition.vert.spv  deferred_pbr_gbuffer.frag.spv  deferred_pbr_gbuffer.vert.spv  deferred_pbr_gbuffer_sky.frag.spv  directional_deferred_pbr_composition.frag.spv  directional_deferred_pbr_composition_shadow.frag.spv  directional_forward_pbr_basic_pbr.frag.spv  directional_forward_pbr_sky.frag.spv  forward_pbr_static.vert.spv  forward_shadow_pbr.frag.spv  forward_shadow_pbr.vert.spv  pbr_frag.spv  point_deferred_pbr_composition.frag.spv  point_forward_pbr_basic_pbr.frag.spv  point_forward_pbr_sky.frag.spv  shadowMap.frag.spv  shadowMap.vert.spv  spot_deferred_pbr_composition.frag.spv  spot_forward_pbr_basic_pbr.frag.spv  spot_forward_pbr_sky.frag.spv
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/cpp/: CMakeLists.txt
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/cpp/include/MainApplication/: MainApplication.h
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/cpp/include/OSRPlugin/: OSRPlugin.h  OSRPluginCommon.h
samples/huawei-cg-renderframework-android-cpp-demo/app/src/main/cpp/source/: Main.cpp  MainApplication.cpp  OSRPlugin.cpp
samples/huawei-cg-smartcachegles-android-cpp-demo/: README-CN.md  README.md  README_ZH.md  build.gradle  settings.gradle
samples/huawei-cg-smartcachegles-android-cpp-demo/app/: build.gradle
samples/huawei-cg-smartcachegles-android-cpp-demo/app/src/main/: AndroidManifest.xml
samples/huawei-cg-smartcachegles-android-cpp-demo/app/src/main/cpp/: CMakeLists.txt  textures.cpp  textures.h
samples/huawei-cg-smartcachegles-android-cpp-demo/gradle/wrapper/: gradle-wrapper.properties
samples/huawei-cg-smartcacheprerotationvulkan-android-cpp-demo/: README-CN.md  README.md  README_ZH.md  build.gradle  settings.gradle
samples/huawei-cg-smartcacheprerotationvulkan-android-cpp-demo/app/: CMakeLists.txt  build.gradle
samples/huawei-cg-smartcacheprerotationvulkan-android-cpp-demo/app/src/main/: AndroidManifest.xml
samples/huawei-cg-smartcacheprerotationvulkan-android-cpp-demo/app/src/main/jni/: main.cpp
samples/huawei-cg-smartcacheprerotationvulkan-android-cpp-demo/app/src/main/shaders/: triangle.frag  triangle.vert
samples/huawei-cg-smartcacheprerotationvulkan-android-cpp-demo/gradle/wrapper/: gradle-wrapper.properties
samples/smart-cache-gles/: README.md  build.gradle  settings.gradle
samples/smart-cache-gles/app/: build.gradle
samples/smart-cache-gles/app/src/main/: AndroidManifest.xml
samples/smart-cache-gles/app/src/main/cpp/: CMakeLists.txt  textures.cpp  textures.h
samples/smart-cache-gles/gradle/wrapper/: gradle-wrapper.properties
samples/smart-cache-prerotation-vulkan/: README.md  build.gradle  settings.gradle
samples/smart-cache-prerotation-vulkan/app/: CMakeLists.txt  build.gradle
samples/smart-cache-prerotation-vulkan/app/src/main/: AndroidManifest.xml
samples/smart-cache-prerotation-vulkan/app/src/main/jni/: main.cpp
samples/smart-cache-prerotation-vulkan/app/src/main/jni/vulkan/: VulkanDeleter.h  VulkanValidation.h
samples/smart-cache-prerotation-vulkan/app/src/main/res/values/: strings.xml
samples/smart-cache-prerotation-vulkan/app/src/main/shaders/: triangle.frag  triangle.vert
samples/smart-cache-prerotation-vulkan/gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
